--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "secure-messaging",
+  "homepage": "https://pl-jay.github.io/secure-messaging/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
@@ -29,6 +31,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
